k8s-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: health-service
  namespace: otus
spec:
  selector:
    app: otus-hw-1
  ports:
    - port: 8081
      targetPort: 8000
